--- a/index.html
+++ b/index.html
@@ -1,1 +1,403 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>ちちぷいユーザー主催投稿企画「あの企画をもう一度」ルーレット</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        #result {
+            margin: 20px 0;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
+</head>
+<body>
+    <h1>ちちぷい投稿企画ランダムピッカー</h1>
+    <button onclick="pickRandomEvent()">イベントを選ぶ</button>
+    <div id="result"></div>
 
+    <script>
+        const events = [
+            { title: "一語生成"},
+            { title: "心情を怪物せよ"},
+            { title: "月に思いを月に願いを"},
+            { title: "魔法使いフェス"},
+            { title: "アングラマフィア"},
+            { title: "胸キュン"},
+            { title: "眼鏡男子"},
+            { title: "透明感"},
+            { title: "グラサンのおっさん"},
+            { title: "お正月を撮ろう♪"},
+            { title: "ちび正月"},
+            { title: "新年の抱負"},
+            { title: "地獄黙示録"},
+            { title: "ギャンブルしようぜ！"},
+            { title: "眼帯"},
+            { title: "圧倒的超ド級ロボ！"},
+            { title: "AIイラスト紅白戦2"},
+            { title: "無料公開キャラ募集❗"},
+            { title: "ラスボス"},
+            { title: "１４星座"},
+            { title: "うちの子交流会"},
+            { title: "サンタフィーバー"},
+            { title: "天使と天界"},
+            { title: "クリスマス？何それ？"},
+            { title: "ピンク髪ツインテール"},
+            { title: "冬の空気"},
+            { title: "V系イケメンのロック"},
+            { title: "ちちぷいダークエルフ"},
+            { title: "エルマVS森の騎士団"},
+            { title: "品質ガチャ"},
+            { title: "森の騎士団"},
+            { title: "今年の漢字生成！？"},
+            { title: "男と女の背中合わせ"},
+            { title: "空欄で遊ぼう"},
+            { title: "天駆ける翼たち"},
+            { title: "制服とニーハイ"},
+            { title: "カードゲームの騎士"},
+            { title: "○○の冬"},
+            { title: "天使と悪魔"},
+            { title: "雪、雪の中、雪の中で"},
+            { title: "趣味"},
+            { title: "特殊部隊"},
+            { title: "黒髪馬"},
+            { title: "ちちぷいルーキーズ"},
+            { title: "トモダチにシタイにゃ"},
+            { title: "ちちぷい詳細設定"},
+            { title: "黒髪ロング"},
+            { title: "寝起き"},
+            { title: "恋人同士の時間"},
+            { title: "11/24オペラの日"},
+            { title: "大没年会2024♪"},
+            { title: "マスクの下"},
+            { title: "秘密結社シャドウズ"},
+            { title: "みんなで作る異世界Ⅲ"},
+            { title: "架空女児アニメキャラ"},
+            { title: "ニーハイソックス"},
+            { title: "銃戦"},
+            { title: "歯車で出来た街"},
+            { title: "[背景}夕焼けと廃墟"},
+            { title: "それぞれの夜"},
+            { title: "おへそ"},
+            { title: "部活動"},
+            { title: "伏せ字で遊ぼう"},
+            { title: "てへぺろ"},
+            { title: "ねず耳フェスティバル"},
+            { title: "推せるキャラ2024"},
+            { title: "エルフ"},
+            { title: "わけがわからないよ"},
+            { title: "ガイフォークスナイト"},
+            { title: "ジュベリアン誕生祭"},
+            { title: "ロック系ファッション"},
+            { title: "1文生成やってみた！"},
+            { title: "異世界ラーメンぽちゃ"},
+            { title: "第１回エルフ大祭"},
+            { title: "忍者"},
+            { title: "発掘の日"},
+            { title: "Z世代"},
+            { title: "ちちぷいイケメンの秋"},
+            { title: "天乃のハロウィン祭"},
+            { title: "民族衣装"},
+            { title: "天乃の哀愁展"},
+            { title: "黒髪の君"},
+            { title: "闘う者達"},
+            { title: "君に花束を"},
+            { title: "[背景}青空と太陽"},
+            { title: "フルーツ大好き"},
+            { title: "着物スタイル"},
+            { title: "あつまれケモナーの森"},
+            { title: "相撲"},
+            { title: "CrazyEyes"},
+            { title: "オーバーオール"},
+            { title: "無料公開キャラ募集"},
+            { title: "紅葉狩り"},
+            { title: "かわいい巫女"},
+            { title: "オフショルダー"},
+            { title: "ちち生ジャージ部"},
+            { title: "生成機能の子を描こう"},
+            { title: "AIの中心で愛を叫ぶ"},
+            { title: "画風チャレンジ"},
+            { title: "よそ見"},
+            { title: "ぷにぽちゃ"},
+            { title: "秋のちちぷい収穫祭"},
+            { title: "走る人"},
+            { title: "夏の思い出"},
+            { title: "マッドドクター"},
+            { title: "ツインテールっ子"},
+            { title: "みんなで作る異世界Ⅰ"},
+            { title: "みんなで作る異世界Ⅱ"},
+            { title: "過去絵と比べてみる"},
+            { title: "夏の美少女"},
+            { title: "俺の曲"},
+            { title: "褐色に煌めく白"},
+            { title: "冷たい飲み物"},
+            { title: "癒しの天使"},
+            { title: "姉と図書館"},
+            { title: "ちちぷいの森"},
+            { title: "Underwater"},
+            { title: "頭の上のサングラス"},
+            { title: "おやすみのイラスト"},
+            { title: "月見酒"},
+            { title: "毎朝の身支度"},
+            { title: "ノースリーブ"},
+            { title: "怪盗VS探偵"},
+            { title: "光る眼"},
+            { title: "就寝"},
+            { title: "白スク水ぽちゃ"},
+            { title: "精霊の祝福"},
+            { title: "お手々隠して脇見せる"},
+            { title: "宝石眼"},
+            { title: "黒づくめ"},
+            { title: "ケモ耳少女"},
+            { title: "腹筋女子集まれ！"},
+            { title: "戦うヒロイン"},
+            { title: "笑える画像"},
+            { title: "白黒世界の君の瞳"},
+            { title: "引用生成"},
+            { title: "終わりの夏"},
+            { title: "ぽっちゃりメイド"},
+            { title: "メイドバニー"},
+            { title: "夏休みの思ひ出"},
+            { title: "ちちぷいフード"},
+            { title: "今日だけは伝えたい"},
+            { title: "華燦風鈴企画四連弾④"},
+            { title: "風使い"},
+            { title: "バニーガール"},
+            { title: "炎使い"},
+            { title: "氷使い"},
+            { title: "黒髪おかっぱ"},
+            { title: "俳句がプロンプト"},
+            { title: "海の見えるレストラン"},
+            { title: "己の微ぽちゃ女子"},
+            { title: "ちちぷいモンスターズ"},
+            { title: "ちち生祭り"},
+            { title: "ヤバいアイドル総選挙"},
+            { title: "甦れ!"},
+            { title: "ワンフレーズを使う"},
+            { title: "おばあちゃん"},
+            { title: "白髪青目最高"},
+            { title: "みんなの水分補給"},
+            { title: "コスプレ"},
+            { title: "楽しい学校生活🎶"},
+            { title: "スクール水着+@"},
+            { title: "黄金の鉄の騎士"},
+            { title: "スク水と救命胴衣"},
+            { title: "パステルカラー"},
+            { title: "真剣"},
+            { title: "野球観戦"},
+            { title: "マリンスポーツ"},
+            { title: "南国の生活体験！"},
+            { title: "チアガールズ"},
+            { title: "AIスイーツ同好会"},
+            { title: "風鈴"},
+            { title: "メイドガール"},
+            { title: "異形頭祭"},
+            { title: "巨大怪獣出現！"},
+            { title: "222kgのミケポ"},
+            { title: "夏祭り"},
+            { title: "200キロのミケポ"},
+            { title: "祝福のウエディング"},
+            { title: "喧嘩して仲直り"},
+            { title: "ＯＫな背景"},
+            { title: "黒髪美人"},
+            { title: "ぽちゃキャラ自己紹介"},
+            { title: "ごちゃごちゃ"},
+            { title: "ひまわり"},
+            { title: "ちちぷい映画祭"},
+            { title: "7月16日は虹の日"},
+            { title: "花火大会"},
+            { title: "夢かわ少女"},
+            { title: "おでかけ"},
+            { title: "海だ!山だ!召喚獣!"},
+            { title: "野菜"},
+            { title: "プロンプトの挑戦状"},
+            { title: "暇な時に見るAI画像"},
+            { title: "闇と光"},
+            { title: "ピンク髪"},
+            { title: "涼しい夏！"},
+            { title: "夏のオーディション"},
+            { title: "AI近未来建築"},
+            { title: "上流階級"},
+            { title: "パワードスーツ女子"},
+            { title: "ツンデレギャル"},
+            { title: "現代社会"},
+            { title: "光のパーティクル"},
+            { title: "未確認飛行物体襲来！"},
+            { title: "無料公開キャラ募集❗"},
+            { title: "顔アップ"},
+            { title: "天乃のアジサイ展"},
+            { title: "着ぐるみ"},
+            { title: "海少女"},
+            { title: "モンスター発表会場"},
+            { title: "怒"},
+            { title: "横顔美人"},
+            { title: "ライフジャケット少女"},
+            { title: "幸せの6月"},
+            { title: "ダジャレ言うの誰じゃ"},
+            { title: "人ならざるもの"},
+            { title: "民族楽器"},
+            { title: "歌の思い出"},
+            { title: "ジューンブライド"},
+            { title: "水彩"},
+            { title: "オリアニキャラ"},
+            { title: "オリキャラ男の娘"},
+            { title: "100kg"},
+            { title: "キョンシー"},
+            { title: "黒タイツ"},
+            { title: "旅に出よう"},
+            { title: "眼帯ブーム"},
+            { title: "みんなで自己紹介"},
+            { title: "神話の神様"},
+            { title: "情熱の赤"},
+            { title: "美しき涙"},
+            { title: "かわいそうはかわいい"},
+            { title: "複数のファンタジー"},
+            { title: "俺と喧嘩しようぜ！"},
+            { title: "天乃のワンピース展"},
+            { title: "ウェイトレス"},
+            { title: "眼鏡三つ編み"},
+            { title: "ショートパンツ"},
+            { title: "ダンシング！"},
+            { title: "読書"},
+            { title: "我に唐揚げ捧げよ"},
+            { title: "少年メイド"},
+            { title: "スポーツウェア×天使"},
+            { title: "くノ一を愛でよう"},
+            { title: "銀髪少女"},
+            { title: "爆笑している女の子"},
+            { title: "アウトロー"},
+            { title: "リミナルスペース"},
+            { title: "異世界を覗く"},
+            { title: "和風"},
+            { title: "ガールズバンド"},
+            { title: "ボディペイント"},
+            { title: "妖怪"},
+            { title: "メイド男子"},
+            { title: "漂う強者感"},
+            { title: "異世界の職業"},
+            { title: "天乃の背景展"},
+            { title: "青髪"},
+            { title: "背景雷雲"},
+            { title: "ライドオン！"},
+            { title: "光の翼"},
+            { title: "AIロゴ"},
+            { title: "ツインテール男子"},
+            { title: "エジプトの女王"},
+            { title: "プラスサイズモデル"},
+            { title: "愛の告白"},
+            { title: "海洋恐怖症"},
+            { title: "ちびキャラ"},
+            { title: "スチームパンク"},
+            { title: "うさぎ"},
+            { title: "暗き幻想の冒険"},
+            { title: "悪魔の笑顔"},
+            { title: "AIシュール画像展"},
+            { title: "AI現代アート"},
+            { title: "バス停"},
+            { title: "ちちぷい生成機能限定"},
+            { title: "大海賊時代"},
+            { title: "上目遣い"},
+            { title: "背景銀河＋天使の翼"},
+            { title: "打倒杉花粉"},
+            { title: "ベンチに座る男性"},
+            { title: "カップル"},
+            { title: "かわいい少女"},
+            { title: "かわいいミニキャラ"},
+            { title: "気分はアゲアゲ🎶"},
+            { title: "天乃のメイド展"},
+            { title: "まな板ノ集い"},
+            { title: "春と男の娘"},
+            { title: "桜の少女"},
+            { title: "貴族"},
+            { title: "ステンドグラス"},
+            { title: "ポニーテール"},
+            { title: "ファッションショー"},
+            { title: "エイリアン"},
+            { title: "獣の叫び"},
+            { title: "野球"},
+            { title: "三つ子"},
+            { title: "魔法使い"},
+            { title: "着物で見返り美人"},
+            { title: "春のイベント"},
+            { title: "妖精"},
+            { title: "ワーキングパーソン"},
+            { title: "改造人間生成"},
+            { title: "スーツ"},
+            { title: "退廃世界"},
+            { title: "ライブパフォーマンス"},
+            { title: "奥義・得意技"},
+            { title: "ベストスマイル選手権"},
+            { title: "褐色肌を愛でよう"},
+            { title: "白い翼"},
+            { title: "薔薇"},
+            { title: "HeartHands"},
+            { title: "トレカ"},
+            { title: "雨、雨の中、雨の中で"},
+            { title: "推しキャラの制服姿"},
+            { title: "悪魔神官は女の子"},
+            { title: "来たれ！擬人化！"},
+            { title: "ハーレム"},
+            { title: "天乃の着物展"},
+            { title: "エルフちゃんメイド！"},
+            { title: "長髪"},
+            { title: "１単語だけプロンプト"},
+            { title: "自慢のオリキャラ"},
+            { title: "己のぽっちゃり女子"},
+            { title: "○○の国のアリス"},
+            { title: "男子高校生"},
+            { title: "女子高校生"},
+            { title: "歌舞伎"},
+            { title: "1boyコンテ"},
+            { title: "星空"},
+            { title: "人魚"},
+            { title: "美少年"},
+            { title: "騎士"},
+            { title: "足"},
+            { title: "赤頭巾ちゃん投稿企画"},
+            { title: "奇怪植物図鑑"},
+            { title: "ジェントルマン"},
+            { title: "ペライチまんが"},
+            { title: "放課後女子"},
+            { title: "現れよ！召喚獣！"},
+            { title: "ウィンタースポーツ"},
+            { title: "ベレー帽"},
+            { title: "頭空っぽランキング"},
+            { title: "緑髪美女・美少女"},
+            { title: "男の娘"},
+            { title: "新年の抱負チャレンジ"},
+            { title: "抽象画"},
+            { title: "ロボット娘"}
+        ];
+
+        function pickRandomEvent() {
+            const randomIndex = Math.floor(Math.random() * events.length);
+            const event = events[randomIndex];
+            
+            document.getElementById('result').innerHTML = `
+                <p>あなたにおすすめの企画は…</p>
+                <h2>${event.title}</h2>
+                <p>です！</p>
+            `;
+        }
+    </script>
+</body>
+</html>
